Bump upstreams
Adopt:
- odparent-13.0.3
- infrautils-6.0.1
- yangtools-11.0.0
- mdsal-12.0.0
- controller-8.0.0
- aaa-0.18.0
- netconf-6.0.0

Change-Id: Ib9356fbcefafbdc2a72d849c33bc433efcd4ab4d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>